update karma config js

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -225,7 +225,7 @@
           <clipPath id="a"><path fill="#fff" d="M0 0h982v239H0z" /></clipPath>
         </defs>
       </svg>
-      <h2>capgemini engineering , {{ title }}</h2>
+      <h1>Hello, {{ title }}</h1>
       <p>CI/CD Pipeline using Terraform Jenkins Ansible Kubernetes. 🎉</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
